<resources>
    <string name="app_name">BancoDigital</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Validate Errors -->
    <string name="text_name_empty">Digite um nome</string>
    <string name="text_email_empty">Digite um e-mail</string>
    <string name="text_amount_empty">Digite um valor</string>
    <string name="text_phone_empty">Digite um telefone</string>
    <string name="text_phone_invalid">Número de telefone inválido</string>
    <string name="text_password_empty">Digite uma senha</string>
    <string name="text_confirm_password_empty">Confirme sua senha</string>
    <string name="fields_password_not_equals">Campo senha e confirmar senha não são iguais</string>

    <!--    Errors Firebase Authentication-->
    <string name="account_not_registered_register_fragment">E-mail ou senha inválidos.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="error_user_not_found">Você não possui seus dados de perfil até o momento. Por favor, adicione seus dados</string>

    <!--  LoginFragment  -->
    <string name="text_edit_email_login_fragment">E-mail</string>
    <string name="text_hint_email_login_fragment">Digite seu email</string>
    <string name="text_edit_password_login_fragment">Senha</string>
    <string name="text_hint_password_login_fragment">Digite sua senha</string>
    <string name="text_button_login_fragment">Entrar</string>
    <string name="text_create_account_login_fragment">Criar conta</string>
    <string name="text_recover_account_login_fragment">Recuperar conta</string>

    <!--  RecoverFragment  -->
    <string name="text_edit_email_recover_fragment">E-mail</string>
    <string name="text_hint_email_recover_fragment">Digite seu email</string>
    <string name="text_message_recover_fragment">Informe seu e-mail para que seja enviado uma mensagem de recuperação</string>
    <string name="text_button_recover_fragment">Enviar</string>
    <string name="text_title_recover_fragment">Recupera conta</string>
    <string name="text_message_send_recover_fragment">A mensagem de recuperação foi enviada ao seu e-mail</string>

    <!--  RegisterFragment  -->
    <string name="text_hint_name_register_fragment">Digite seu nome</string>
    <string name="text_hint_email_register_fragment">Digite seu e-mail</string>
    <string name="text_hint_phone_register_fragment">Digite seu telefone</string>
    <string name="text_hint_password_register_fragment">Digite uma senha</string>
    <string name="text_hint_confirm_password_register_fragment">Confirme a senha</string>
    <string name="text_title_register_fragment">Criar conta</string>
    <string name="text_button_register_fragment">Cadastrar</string>
    <string name="text_edit_name_register_fragment">Nome</string>
    <string name="text_edit_email_register_fragment">E-mail</string>
    <string name="text_edit_phone_register_fragment">Telefone</string>
    <string name="text_edit_password_register_fragment">Senha</string>
    <string name="text_edit_confirm_password_register_fragment">Confirmar senha</string>

    <!--  BottomSheet  -->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>

    <!--  HomeFragment  -->
    <string name="text_balance_format_value">R$ %1$s</string>

    <!-- DepositReceiptFragment   -->
    <string name="text_title_toolbar_deposit_receipt_fragment">Recibo</string>
    <string name="text_message_status_deposit_receipt_fragment">Depósito efetuado com sucesso</string>
    <string name="text_message_information_deposit_receipt_fragment">Seu depósito ficará disponível em até 3 dias úteis.</string>
    <string name="text_message_code_transaction_deposit_receipt_fragment">Código Transação</string>
    <string name="text_message_data_deposit_receipt_fragment">Data deposito</string>
    <string name="text_message_amount_deposit_receipt_fragment">Valor deposito</string>
    <string name="text_button_confirm_deposit_receipt_fragment">Ok</string>

    <!-- RechargeReceiptFragment   -->
    <string name="text_title_toolbar_recharge_receipt_fragment">Recarga</string>
    <string name="text_message_status_recharge_receipt_fragment">Recarga efetuada com sucesso</string>
    <string name="text_message_information_recharge_receipt_fragment">Seu crédito estará disponível em alguns minutos.</string>
    <string name="text_message_code_transaction_recharge_receipt_fragment">Código Transação</string>
    <string name="text_message_data_recharge_receipt_fragment">Data recarga</string>
    <string name="text_message_amount_recharge_receipt_fragment">Valor recarga</string>
    <string name="text_message_phone_recharge_receipt_fragment">Número</string>
    <string name="text_button_confirm_recharge_receipt_fragment">Ok</string>

    <!-- DepositFormFragment   -->
    <string name="text_title_toolbar_deposit_form_fragment">Depositar</string>
    <string name="text_message_amount_deposit_form_fragment">Informe o valor a ser depositado.</string>
    <string name="text_message_input_amount_deposit_form_fragment">Valor do depósito</string>
    <string name="text_button_confirm_deposit_form_fragment">Confirmar</string>

    <!-- RechargeFormFragment   -->
    <string name="text_title_toolbar_recharge_form_fragment">Recarga</string>
    <string name="text_message_input_amount_recharge_form_fragment">Valor da recarga</string>
    <string name="text_message_input_phone_recharge_form_fragment">Insira o número</string>
    <string name="text_hint_input_phone_recharge_form_fragment">(12) 12345-6789</string>
    <string name="text_button_confirm_recharge_form_fragment">Confirmar</string>
    <string name="text_amount_valid_empty">Recarga mínima de R$10,00</string>

    <!-- ExtractFragment   -->
    <string name="text_title_toolbar_extract_fragment">Extrato</string>

    <!-- TransferFragment   -->
    <string name="text_title_toolbar_transfer_fragment">Usuários</string>

    <!-- Permissions Profile   -->
    <string name="text_message_camera_denied_profile_fragment">Para que você capture imagens utilizando a câmera precisaremos da permissão. Acesse as configurações de permissões e habilite a permissão </string>
    <string name="text_message_gallery_denied_profile_fragment">Para que você carregue imagens utilizando a galeria precisaremos da permissão. Acesse as configurações de permissões e habilite a permissão </string>

    <!--  TransferFormFragment  -->
    <string name="text_title_toolbar_transfer_form_fragment">Transferência</string>
    <string name="text_message_amount_transfer_form_fragment">Informe o valor a ser transferido.</string>
    <string name="text_message_input_amount_transfer_form_fragment">Valor da transferência</string>
    <string name="text_button_confirm_transfer_form_fragment">Confirmar</string>
    <string name="text_message_empty_amount_transfer_form_fragment">Informe um valor para a transferência</string>
    <string name="text_balance_format_value_form_fragment">Saldo: R$ %1$s</string>

    <!--  ConfirmTransferFragment  -->
    <string name="text_title_toolbar_confirm_transfer_fragment">Transferência</string>
    <string name="text_message_verify_data_confirm_transfer_fragment">Verifique os dados antes de confirmar a transferência.</string>
    <string name="text_message_warning_confirm_transfer_fragment">Após confirmar a transferência não será possível desfazê-la</string>
    <string name="text_subtitle_data_confirm_transfer_fragment">Dados da transferência</string>
    <string name="text_message_input_amount_confirm_transfer_form_fragment">Valor da transferência</string>
    <string name="text_button_confirm_confirm_transfer_fragment">Confirmar</string>
    <string name="text_message_empty_amount_confirm_transfer_fragment">Informe um valor para a transferência</string>

    <!--  ReceiptTransferFragment  -->
    <string name="text_title_toolbar_receipt_transfer_fragment">Recibo</string>
    <string name="text_message_verify_data_receipt_transfer_fragment">Transferência realizada com sucesso</string>
    <string name="text_message_warning_receipt_transfer_fragment">Débito realizado com sucesso. A previsão do crédito na conta de destino é de até 30 minutos</string>
    <string name="text_data_receipt_transfer_fragment">Data</string>
    <string name="text_balance_transfer_receipt_transfer_fragment">Valor da transferência</string>
    <string name="text_message_code_transaction_receipt_transfer_fragment">Código Transação</string>
    <string name="text_message_received_receipt_transfer_fragment">Recebido de:</string>
    <string name="text_message_send_receipt_transfer_fragment">Enviado para:</string>


</resources>