<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".presenter.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_title_register_fragment" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default"
            android:text="@string/text_edit_name_register_fragment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edit"
            android:drawableStart="@drawable/ic_user_fill"
            android:drawablePadding="12dp"
            android:drawableTint="@color/color_default"
            android:hint="@string/text_hint_name_register_fragment"
            android:padding="14dp"
            android:textColorHint="#7DCAFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default"
            android:text="@string/text_edit_email_register_fragment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edit"
            android:drawableStart="@drawable/ic_email_fill"
            android:drawablePadding="12dp"
            android:drawableTint="@color/color_default"
            android:hint="@string/text_hint_email_register_fragment"
            android:padding="14dp"
            android:textColorHint="#7DCAFF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default"
            android:text="@string/text_edit_phone_register_fragment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edit"
            android:drawableStart="@drawable/ic_phone_fill"
            android:drawablePadding="12dp"
            android:drawableTint="@color/color_default"
            android:hint="@string/text_hint_phone_register_fragment"
            android:padding="14dp"
            android:textColorHint="#7DCAFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default"
            android:text="@string/text_edit_password_register_fragment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edit"
            android:drawableStart="@drawable/ic_password_fill"
            android:drawablePadding="12dp"
            android:drawableTint="@color/color_default"
            android:hint="@string/text_hint_password_register_fragment"
            android:padding="14dp"
            android:textColorHint="#7DCAFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_default"
            android:text="@string/text_edit_confirm_password_register_fragment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_edit"
            android:drawableStart="@drawable/ic_password_fill"
            android:drawablePadding="12dp"
            android:drawableTint="@color/color_default"
            android:hint="@string/text_hint_confirm_password_register_fragment"
            android:padding="14dp"
            android:textColorHint="#7DCAFF" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:layout_marginVertical="12dp"
            android:text="@string/text_button_register_fragment"
            app:backgroundTint="@null" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:indeterminateTint="@color/color_default"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>